e3.txt
cargo :     Checking picasa-next v0.1.0 (D:\photoapp\picasa-next\src-tauri)
所在位置 行:1 字符: 1
+ cargo check 2>&1 | Out-File -Encoding utf8 D:\photoapp\picasa-next\e3 ...
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking pi...next\src-tauri):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error: proc macro panicked
   --> src\lib.rs:127:14
    |
127 |         .run(tauri::generate_context!())
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = help: message: The `frontendDist` configuration is set to `"../dist"` but this path doesn't exist

warning: unused import: `AppHandle`
 --> src\ipc\system_commands.rs:4:13
  |
4 | use tauri::{AppHandle, State};
  |             ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `DateTime`
  --> src\layout\justified.rs:13:14
   |
13 | use chrono::{DateTime, Datelike, TimeZone, Utc};
   |              ^^^^^^^^

warning: unused import: `get_unenriched_image_ids`
  --> src\scanner\enricher.rs:17:25
   |
17 |     get_item_path_info, get_unenriched_image_ids, update_live_photo_flags, update_sort_datetime,
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::db::models::MediaFilter`
  --> src\scanner\fast_scan.rs:22:5
   |
22 | use crate::db::models::MediaFilter;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `rusqlite::Connection`
 --> src\state.rs:8:5
  |
8 | use rusqlite::Connection;
  |     ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `thumb_exists`
  --> src\thumbnail\generator.rs:21:64
   |
21 | use crate::thumbnail::cache::{ensure_thumb_dir, thumb_db_path, thumb_exists, thumb_path};
   |                                                                ^^^^^^^^^^^^

warning: unused variable: `root_path_clone2`
  --> src\ipc\scan_commands.rs:92:13
   |
92 |         let root_path_clone2 = root_path.clone();
   |             ^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_root_path_clone2`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `pending_clone`
   --> src\layout\justified.rs:170:17
    |
170 |             let pending_clone = pending_items.clone();
    |                 ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_pending_clone`

error[E0597]: `conn` does not live long enough
   --> src\scanner\enricher.rs:89:28
    |
 88 |             let conn = writer.lock().map_err(|e| AppError::Db(e.to_string()))?;
    |                 ---- binding `conn` declared here
 89 |             let mut stmt = conn.prepare(
    |                            ^^^^ borrowed value does not live long enough
...
 97 |             stmt.query_map(rusqlite::params![root_id, ENRICHMENT_BATCH], |row| row.get(0))?
    |             ------------------------------------------------------------------------------- a temporary with acce
ss to the borrow is created here ...
...
100 |         };
    |         -- ... and the borrow might be used here, when that temporary is dropped and runs the destructor for type
 `ControlFlow<std::result::Result<Infallible, rusqlite::Error>, MappedRows<'_, {closure@src\scanner\enricher.rs:97:74: 
97:79}>>`
    |         |
    |         `conn` dropped here while still borrowed
    |
    = note: the temporary is part of an expression at the end of a block;
            consider forcing this temporary to be dropped sooner, before the block's local variables are dropped
help: for example, you could save the expression's value in a new local variable `x` and then make `x` be the expressio
n at the end of the block
    |
 97 ~             let x = stmt.query_map(rusqlite::params![root_id, ENRICHMENT_BATCH], |row| row.get(0))?
 98 |                 .filter_map(|r| r.ok())
 99 ~                 .collect(); x
    |

error[E0597]: `stmt` does not live long enough
   --> src\scanner\enricher.rs:97:13
    |
 89 |             let mut stmt = conn.prepare(
    |                 -------- binding `stmt` declared here
...
 97 |             stmt.query_map(rusqlite::params![root_id, ENRICHMENT_BATCH], |row| row.get(0))?
    |             ^^^^---------------------------------------------------------------------------
    |             |
    |             borrowed value does not live long enough
    |             a temporary with access to the borrow is created here ...
...
100 |         };
    |         -- ... and the borrow might be used here, when that temporary is dropped and runs the destructor for type
 `ControlFlow<std::result::Result<Infallible, rusqlite::Error>, MappedRows<'_, {closure@src\scanner\enricher.rs:97:74: 
97:79}>>`
    |         |
    |         `stmt` dropped here while still borrowed
    |
    = note: the temporary is part of an expression at the end of a block;
            consider forcing this temporary to be dropped sooner, before the block's local variables are dropped
help: for example, you could save the expression's value in a new local variable `x` and then make `x` be the expressio
n at the end of the block
    |
 97 ~             let x = stmt.query_map(rusqlite::params![root_id, ENRICHMENT_BATCH], |row| row.get(0))?
 98 |                 .filter_map(|r| r.ok())
 99 ~                 .collect(); x
    |

For more information about this error, try `rustc --explain E0597`.
warning: `picasa-next` (lib) generated 8 warnings
error: could not compile `picasa-next` (lib) due to 3 previous errors; 8 warnings emitted
